tests/parser/statement_case_err6.expected
Syntax Error: line 12:
Unexpected token (TOK_PERIOD, '.'), likely missing a(n)  
  'TOK_SEMICOLON' or
  'TOK_KEY_END'
