tests/parser/statement_case_err6.mtp
begin
	(*missing end*)
	case (something) of
	first:
		s := 0;
	second:
		s := 1
	else
		s := 99
	
end
.